detect package version history

Version 0.3-3, May 15, 2015
    * load_BAM_QPAD function is deprecated.

Version 0.3-2, May 15, 2014
    * Bugfix in cmulti2.fit: n was undefined (reported by Julie Hart).
    * Bugfix in hbootindex: n was not set when strata was missing.
    * Documentation fixes (comma separated lists of variable 
      names inside \code).

Version 0.3-1, Sept 25, 2013
    * hbootindex: routine improved, now uses weights proportional
      to groups sizes.
    * Cleanup to satisfy R 3.0.2 check: remove :::.
    * Bugfix: svocc returned k=1 object irrespective of the n.clones
      option settings for MLE with method="dc".
    * Help page added for internal objects (e.g. cmulti.fit0).
    * drop.scope.svisit is no longer treated as a method because
      drop.scope is not a generic.

Version 0.3-0, July 29, 2013
    * jags.engine removed, replaced by dcmle dependency.
    * dFormula and checkDesign added with Formula dependency,
      this will replace the old svisitFormula interface
      to allow handling of more complex designs.
    * logdmultinom: simplified version of dmultinom.
    * bymethod: collapses (pools) observations by methodology.
    * cmulti: new function for conditional multinomial estimation.
    * load_BAM_QPAD: new function to load BAM QPAD parameter
      estimates and support functions.
    * hbootindex: new function to sample indices with replacement
      for grouped/stratified data.
    * fitted.cmulti added: get estimated singing rate or distance model
      parameter (not available for type="mix")
    * predict methods: response (lhs) is dropped from formula
      when newdata is provided.

Version 0.2-2, May 2, 2012
    * inst/COPYING file removed (standard license).

Version 0.2-1, November 25, 2011
    * Help pages edited.

Version 0.2-0, October 18, 2011
    * svabu and related functions added.
    * summary: nobs was returned as NULL,
      so AIC was not printed. Now fixed.
    * R (>= 2.13.0) added to DESCRIPTION