@@ -2,6 +2,8 @@ detect package version history
 
 Version 0.3-3, May 15, 2015
     * load_BAM_QPAD function is deprecated.
+    * hbootindex bugfix: sample() behaviour when length(x)==1 is recognized
+      when resampling from a length 1 vector.
 
 Version 0.3-2, May 15, 2014
     * Bugfix in cmulti2.fit: n was undefined (reported by Julie Hart).
